
Pending:
 - Define Counter Skills;
 - Minimap Tags;
 - Extend walls to follow map height;
 - Define paths to improve the A* at outdoor maps;
 - Put Lights on MapEditor;
 - Make a tutorial to the battle system;
 - Implement 5-15% of the feats defined on DNT Book;
 - Score at Death Screen;
 - Capacity of using feats;

================================================
|               Version 0.3.1                  |
================================================
 - Running Animation/Action/Option for Playable Characters;
 - Anisotropic Texture Filtering;

================================================
|                Version 0.3                   |
================================================
 - Briefing now has its own window; 
 - Added icons to menus;
 - Fixed a bug for inventory menu limits;
 - Fixed a bug when inserting a completed mission
   on mission controller;
 - Re-enabled the outdoor terrain view frustum culling;
 - Put Farview Distance as a Game Option;
 - Optimizations for outdoor rendering;
 - Keep window state on map change (opened/closed);
 - Fixed a bug at mouse coordinate (Screen->World);
 - Disable particles if no GL_Point extensions found (it 
   will fix a segfault at the outdoor map);
 - Ranged options now changeable with a fill bar; 
 - Only draw battle move circle if have move actions;
 - Comic book cutscenes;
 - Barter;
 - Define multitexture as option (improve critically the outdoor rendering at
 old graphic cards, but disable the terrain texture splatting);
 - Fixed a bug at sun/moon position;
 - Continuous Walk with Mouse;
 - Calling read-only skills window at character's window;
 - Define sound's interval time before loop;
 - Define sound effects per map;
 - Walls with different textures per side;
 - MapEditor: tool to cut walls (knife);
 - New MiniMap Draw Method;
 - Use of heal items;
 - Fixed a bug at IA Script variable type check;
 - VIM syntax files for DNT Script and Dialog Languages;
 - Skill Checks at Dialogs;